Fixed Safari and Apple x-overflow
:)

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html {
 * {
     font-family: monospace;
     font-size: 1rem;
+    position: relative;
     overflow-x: hidden;
 }
 
